Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18514

Assertion `!writer.checksum_len || writer.remains == 0' failed

    XMLWordPrintable

Details

    Description

      10.4 e80bcd7f64fc8ff6f46c1f

      2019-02-08  7:44:23 11 [Warning] mysqld: Disk is full writing './mysql-bin.000001' (Errcode: 28 "No space left on device"). Waiting for someone to free space... (Expect up to 60 secs delay for server to continue after freeing disk space)
      2019-02-08  7:44:23 11 [Warning] mysqld: Retry in 60 secs. Message reprinted in 600 secs
      2019-02-08  7:54:23 11 [Warning] mysqld: Retry in 60 secs. Message reprinted in 600 secs
      2019-02-08  8:04:23 11 [Warning] mysqld: Retry in 60 secs. Message reprinted in 600 secs
      2019-02-08  8:14:23 11 [Warning] mysqld: Retry in 60 secs. Message reprinted in 600 secs
      mysqld: /git/10.4/sql/log.cc:7152: int MYSQL_BIN_LOG::write_cache(THD*, IO_CACHE*): Assertion `!writer.checksum_len || writer.remains == 0' failed.
       
      stdlib/abort.c:91(__GI_abort)[0x7f4e5de4902a]
      assert/assert.c:92(__assert_fail_base)[0x7f4e5de3fbd7]
      /lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f4e5de3fc82]
      sql/log.cc:7154(MYSQL_BIN_LOG::write_cache(THD*, st_io_cache*))[0x5595ec4f2b83]
      sql/log.cc:8147(MYSQL_BIN_LOG::write_transaction_or_stmt(MYSQL_BIN_LOG::group_commit_entry*, unsigned long long))[0x5595ec4f84bd]
      sql/log.cc:7903(MYSQL_BIN_LOG::trx_group_commit_leader(MYSQL_BIN_LOG::group_commit_entry*))[0x5595ec4f658e]
      sql/log.cc:7700(MYSQL_BIN_LOG::write_transaction_to_binlog_events(MYSQL_BIN_LOG::group_commit_entry*))[0x5595ec4f533d]
      sql/log.cc:7370(MYSQL_BIN_LOG::write_transaction_to_binlog(THD*, binlog_cache_mngr*, Log_event*, bool, bool, bool))[0x5595ec4f3b6f]
      sql/log.cc:1785(binlog_flush_cache(THD*, binlog_cache_mngr*, Log_event*, bool, bool, bool))[0x5595ec4d5d62]
      sql/log.cc:1837(binlog_commit_flush_stmt_cache(THD*, bool, binlog_cache_mngr*))[0x5595ec4d631e]
      sql/log.cc:2109(binlog_rollback(handlerton*, THD*, bool))[0x5595ec4d7ad0]
      sql/handler.cc:1850(ha_rollback_trans(THD*, bool))[0x5595ec24dd40]
      sql/transaction.cc:573(trans_rollback_stmt(THD*))[0x5595ebe8d425]
      sql/sql_parse.cc:6359(mysql_execute_command(THD*))[0x5595ebb1fdd8]
      sql/sql_parse.cc:8120(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x5595ebb2a014]
      sql/sql_parse.cc:1808(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x5595ebb02ca9]
      sql/sql_parse.cc:1356(do_command(THD*))[0x5595ebaffe13]
      sql/sql_connect.cc:1399(do_handle_one_connection(CONNECT*))[0x5595ebe5d950]
      sql/sql_connect.cc:1303(handle_one_connection)[0x5595ebe5d31a]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f4e5ec886ba]
      x86_64/clone.S:111(clone)[0x7f4e5df1941d]
      

      Attachments

        1. 1.7z
          76 kB
        2. core.7z
          1.36 MB

        Issue Links

          Activity

            People

              sujatha.sivakumar Sujatha Sivakumar (Inactive)
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d 4.5h
                  3d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.